--- a/01_Numpy and Pandas Intro.ipynb
+++ b/01_Numpy and Pandas Intro.ipynb
@@ -26,8 +26,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.9.17 (main, Jul  5 2023, 20:47:11) [MSC v.1916 64 bit (AMD64)]\n",
-      "1.25.2\n"
+      "3.8.17 (default, Jul  5 2023, 20:35:33) [MSC v.1916 64 bit (AMD64)]\n",
+      "1.24.3\n"
      ]
     }
    ],
@@ -47,11 +47,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.19034287, 0.4254286 , 0.4445817 ],\n",
-       "       [0.81848007, 0.48597529, 0.86807252],\n",
-       "       [0.04280088, 0.98517988, 0.83838476],\n",
-       "       [0.07624095, 0.2241268 , 0.71265795],\n",
-       "       [0.6707995 , 0.66582048, 0.45806163]])"
+       "array([[0.43638075, 0.2781863 , 0.18448851],\n",
+       "       [0.34179081, 0.86824561, 0.32045903],\n",
+       "       [0.73131467, 0.0493214 , 0.00413576],\n",
+       "       [0.02914756, 0.33157903, 0.01754815],\n",
+       "       [0.18748159, 0.19537213, 0.4884284 ]])"
       ]
      },
      "execution_count": 2,
@@ -2023,7 +2023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
