Flipped assignment 1 part A complete.

--- a/Flipped Assignments/ICA1_MachineLearning_PartA.ipynb
+++ b/Flipped Assignments/ICA1_MachineLearning_PartA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,18 +102,18 @@
      "output_type": "stream",
      "text": [
       "array([[ 0.03807591,  0.05068012,  0.06169621, ..., -0.00259226,\n",
-      "         0.01990842, -0.01764613],\n",
+      "         0.01990749, -0.01764613],\n",
       "       [-0.00188202, -0.04464164, -0.05147406, ..., -0.03949338,\n",
-      "        -0.06832974, -0.09220405],\n",
+      "        -0.06833155, -0.09220405],\n",
       "       [ 0.08529891,  0.05068012,  0.04445121, ..., -0.00259226,\n",
-      "         0.00286377, -0.02593034],\n",
+      "         0.00286131, -0.02593034],\n",
       "       ...,\n",
       "       [ 0.04170844,  0.05068012, -0.01590626, ..., -0.01107952,\n",
-      "        -0.04687948,  0.01549073],\n",
+      "        -0.04688253,  0.01549073],\n",
       "       [-0.04547248, -0.04464164,  0.03906215, ...,  0.02655962,\n",
-      "         0.04452837, -0.02593034],\n",
+      "         0.04452873, -0.02593034],\n",
       "       [-0.04547248, -0.04464164, -0.0730303 , ..., -0.03949338,\n",
-      "        -0.00421986,  0.00306441]])\n",
+      "        -0.00422151,  0.00306441]])\n",
       "array([151.,  75., 141., 206., 135.,  97., 138.,  63., 110., 310., 101.,\n",
       "        69., 179., 185., 118., 171., 166., 144.,  97., 168.,  68.,  49.,\n",
       "        68., 245., 184., 202., 137.,  85., 131., 283., 129.,  59., 341.,\n",
@@ -192,13 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Enter your answer here (or write code to calculate it)\n",
-    "\n",
-    "\n",
+    "X = ds.data\n",
+    "X.shape[1] + 1 # Column features + 1 for the bias term. \n",
     "\n",
     "#"
    ]
@@ -221,13 +232,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 152.13348416  -10.0098663  -239.81564367  519.84592005  324.3846455\n",
+      " -792.17563855  476.73902101  101.04326794  177.06323767  751.27369956\n",
+      "   67.62669218]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write you code here, print the values of the regression weights using the 'print()' function in python\n",
     "import numpy as np\n",
-    "\n"
+    "\n",
+    "bias = np.ones(shape=(ds.data.shape[0], 1)) # Bias term for each observation (row). \n",
+    "X = np.hstack((bias, ds.data)) # design matrix. \n",
+    "y = ds.target # response vector.\n",
+    "\n",
+    "W = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "print(W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -10.0098663  -239.81564367  519.84592005  324.3846455  -792.17563855\n",
+      "  476.73902101  101.04326794  177.06323767  751.27369956   67.62669218]\n",
+      "152.13348416289597\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(ds.data, ds.target)\n",
+    "print(model.coef_)\n",
+    "print(model.intercept_)"
    ]
   },
   {
@@ -236,14 +288,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notation \n",
+    "\n",
+    "- $X_1^{(1)}$ denotes the column vector or predictor values for the 1st instances. \n",
+    "- $y^{(1)}$ denotes the response value for the 1st instance (scalar). \n",
+    "- Assume that the first element of $X_1^{(1)}$ is $x_0 = 1$ (intercept design). \n",
+    "- Assume that the first element of the weight vector $W$ is $w_0$ the bias term.\n",
+    "\n",
+    "Prediction Equation\n",
+    "$$\n",
+    "    W^T X^{(i)} = \\hat y^{(i)}\n",
+    "$$\n",
+    "\n",
+    "Objective Function\n",
+    "$$\n",
+    "    J(W) = \\sum_{i} (y^{(i)} - W^T x^{(i)})^2\n",
+    "$$\n",
+    "\n",
+    "True Data Generating Model \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    y^{(i)} &= W^T X^{(i)} + \\epsilon_i \\\\\n",
+    "    \\forall i \\ \\epsilon_i &\\sim N(0, \\sigma^2) \\\\\n",
+    "    \\forall i \\neq j \\ &Cov(\\epsilon_i, \\epsilon_j) = 0 \\\\\n",
+    "    \\Rightarrow y^{(i)} &\\sim N(W^T X^{(i)}, \\sigma^2)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Log-Likelihood\n",
+    "\n",
+    "$$\n",
+    "    l(W | Y, X, \\sigma^2)  = \n",
+    "        \\ln \\left(\n",
+    "            \\dfrac{1}{\\sqrt{2\\pi\\sigma^2}}\n",
+    "            \\right) \n",
+    "        - \\dfrac{1}{2\\sigma^2}\n",
+    "        \\sum_{i} (y^{(i)} - W^T X^{(i)})^2\n",
+    "$$\n",
+    "\n",
+    "MLE \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underset{\\hat W}{\\text{argmax}} - \\sum_{i} (y^{(i)} - W^T X^{(i)})^2\n",
+    "    &= \n",
+    "    \\underset{\\hat W}{\\text{argmin}} \\sum_{i} (y^{(i)} - W^T X^{(i)})^2\n",
+    "\\end{align*}\n",
+    "\n",
+    "Gradient\n",
+    "\n",
+    "$$\n",
+    "\\frac 1 2 \\nabla_W J(W) = \\sum_{i} (y^{(i)} - W^T x^{(i)}) \\cdot x^{(i)}\n",
+    "$$\n",
+    "\n",
+    "Iterative Solution \n",
+    "\n",
+    "$$\n",
+    "W_{t+1} = W_{t} - \\alpha \\sum_{i} (y^{(i)} - W^T x^{(i)}) \\cdot x^{(i)}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification\n",
+    "\n",
+    "Link Function \n",
+    "$$\n",
+    "    g(W^T X^{(i)}) = \\hat y^{(i)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Iterative Solution \n",
+    "$$\n",
+    "W_{t+1} = W_{t} - \\alpha \\sum_{i} (y^{(i)} - g(W^T x^{(i)})) \\cdot  \n",
+    "    g'(W^T x^{(i)}) \\cdot x^{(i)} \n",
+    "$$\n",
+    "\n",
+    "Sigmoid\n",
+    "$$\n",
+    "g(\\theta) = \\dfrac{1}{1 + e^{-\\theta}}\n",
+    "$$\n",
+    "$$\n",
+    "g'(\\theta) = (1+e^{-\\theta})^{-2} \\cdot e^{-\\theta} = g(\\theta)(1-g(\\theta))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Side Note \n",
+    "\n",
+    "Let $f(x) = ||x||^2 = x^Tx$ (this is the l2 norm). \n",
+    "\n",
+    "\\begin{align*}\n",
+    "     (x + \\delta)^T (x + \\delta) &= (x^T + \\delta^T) (x + \\delta) \\\\ \n",
+    "        &= (x^T + \\delta^T)x + (x^T + \\delta^T)\\delta \\\\ \n",
+    "        &= x^Tx + \\delta^Tx + x^T\\delta + \\delta^T\\delta \\\\ \n",
+    "        &= f(x) + x^T\\delta + x^T\\delta + o(\\delta) \\\\ \n",
+    "        &= f(x) + 2x^T\\delta + o(\\delta) \\\\ \n",
+    "\\end{align*}\n",
+    "\n",
+    "Thus the derivative must be $2x^T$. "
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cs7324",
    "language": "python",
-   "name": "python3"
+   "name": "cs7324"
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
