--- a/10a. Keras Wide and Deep as TFData.ipynb
+++ b/10a. Keras Wide and Deep as TFData.ipynb
@@ -2154,7 +2154,7 @@
     "In what ways might we try to make the model found generalize more concretely?\n",
     "\n",
     "**Self Test:** What is the best method to make the results better?  \n",
-    "- A. Add Dropout to deep network\n",
+    "- **A. Add Dropout to deep network**\n",
     "- B. Add Dropout to wide network\n",
     "- C. Perturb the Categorical Data during Training (augmentation)\n",
     "- D. Add L2 regularization to different layer's weights\n",
